RouteLogic-v4.0.0/force-app/main/default/objects/Security_Audit_Log__c/Security_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Comprehensive security audit logging for RouteLogic Enhanced operations</description>
    <label>Security Audit Log</label>
    <nameField>
        <displayFormat>SAL-{0000000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>