RouteLogic-v4.0.0/force-app/main/default/objects/Security_Audit_Log__c/fields/Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Details__c</fullName>
    <description>JSON-formatted details about the security event</description>
    <label>Event Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>