RouteLogic-v4.0.0/force-app/main/default/objects/Security_Audit_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of security event being logged</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Data_Access</fullName>
                <label>Data Access</label>
            </value>
            <value>
                <fullName>Data_Modification</fullName>
                <label>Data Modification</label>
            </value>
            <value>
                <fullName>Configuration_Change</fullName>
                <label>Configuration Change</label>
            </value>
            <value>
                <fullName>Security_Violation</fullName>
                <label>Security Violation</label>
            </value>
            <value>
                <fullName>Rate_Limit_Exceeded</fullName>
                <label>Rate Limit Exceeded</label>
            </value>
            <value>
                <fullName>Input_Validation_Failure</fullName>
                <label>Input Validation Failure</label>
            </value>
            <value>
                <fullName>Encryption_Operation</fullName>
                <label>Encryption Operation</label>
            </value>
            <value>
                <fullName>API_Call</fullName>
                <label>API Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>