RouteLogic-v4.0.0/force-app/main/default/objects/Security_Audit_Log__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP address of the user when the event occurred</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>