RouteLogic-v4.0.0/force-app/main/default/objects/Security_Audit_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Session ID when the event occurred</description>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>