RouteLogic-v4.0.0/force-app/main/default/objects/Security_Audit_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who triggered the security event</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Audit Logs</relationshipLabel>
    <relationshipName>Security_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>